--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thatix – Learn How to Make Delicious Recipes Step by Step</title>
 
+    <!-- favicon -->
+    <link rel="shortcut icon" href="images/Thatix.png" type="image/x-icon">
+
 
     <!-- fontawosome cdn link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
